# FAIRMD

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  lint.yml  release.yml  tests.yml
src/fairmd/: __init__.py
tests/: test_fairmd.py
