[build-system]
requires = ["setuptools>=77", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "NMRlipids Open Collaboration", email = "databank@nmrlipids.fi"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
]
description = "FAIRMD meta-package: Installs all FAIRMD packages for molecular dynamics analysis"
dynamic = ["version"]
keywords = [
    "Science",
    "Molecular Dynamics",
    "Membranes",
    "Meta-package",
]
license = "GPL-3.0-or-later"
name = "fairmd"
readme = "README.md"
dependencies = [
    "fairmd-lipids",
]
requires-python = ">=3.10,<3.15"

[project.urls]
repository = "https://github.com/NMRLipids/FAIRMD"
issues = "https://github.com/NMRLipids/FAIRMD/issues"

[tool.check-manifest]
ignore = ["src/fairmd/_version.py"]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.setuptools_scm]
version_file = "src/fairmd/_version.py"

[tool.setuptools]
packages = ["fairmd"]
package-dir = {"" = "src"}

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["src/fairmd/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
extend-select = ["E501"]
ignore = []
